# OpenFAIRDataAI

./: .gitignore  Pipfile  README.md  app.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  vite.config.js  x.py
.github/workflows/: deploy.yml  pylint.yml
src/: App.css  App.jsx  index.css  levels.py  treemap.py
src/components/: AssetDetails.css  AssetDetails.jsx  DataStream.css  DataStream.jsx  FairHelp.jsx  FairPrinciples.css  FairPrinciples.jsx  Sidebar.css  Sidebar.jsx
src/test/: App.test.jsx  AssetDetails.test.jsx  DataStream.test.jsx  FairPrinciples.test.jsx  Sidebar.test.jsx  setup.js
