[tool.poetry]
name = "streamlit-test"
version = "0.1.0"
description = ""
authors = ["Gareth Murphy <16783958+garethcmurphy@users.noreply.github.com.>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
matplotlib = "^3.10.0"
numpy = "^2.2.0"
pandas = "^2.2.3"
requests = "^2.32.3"
streamlit = "^1.41.1"
plotly = "^5.24.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
